# contract-driven-development

./: LICENSE  README.md
.devcontainer/: docker-compose.yaml
.devcontainer/backend/: devcontainer.json
.devcontainer/frontend/: devcontainer.json
backend/: Dockerfile  Makefile  README.md  go.mod  go.sum  main.go  main_test.go  oapi-codegen-config-schema.json  pyproject.toml  tests.go
backend/api/petstore/: petstore-service.go  server.cfg.yaml  types.cfg.yaml
backend/container_files/: openapi-generator-cli
backend/src/lib/api/: README.md  pyproject.toml  setup.py
backend/src/lib/api/docs/: Error.md  Pet.md  PetsApi.md
backend/src/lib/api/openapi_client/: api_client.py  configuration.py  exceptions.py  rest.py
backend/src/lib/api/openapi_client/api/: pets_api.py
backend/src/lib/api/openapi_client/models/: pet.py
backend/src/lib/api/test/: test_error.py  test_pet.py  test_pets_api.py
frontend/: .prettierrc.yaml  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vitest.config.ts
frontend/src/: App.tsx  utils.ts
frontend/src/components/Button/: Button.tsx
frontend/src/components/Card/: Card.tsx
frontend/src/components/Controls/: Controls.tsx
frontend/src/components/CreatePetPopover/: CreatePetPopover.tsx  index.ts
frontend/src/components/Loading/: Loading.tsx
frontend/src/components/Tag/: Tag.tsx
frontend/src/lib/api/: services.ts  types.ts  v1.d.ts
frontend/src/store/: index.ts
frontend/src/tests/api/: pet.test.ts
spec/: openapi-spec-v1.yaml
